Link to beta docs from release notes.

--- a/users/history/version_1_60_0.html
+++ b/users/history/version_1_60_0.html
@@ -45,7 +45,7 @@
               "news-title">Version 1.60.0 - work in progress</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-              <p><a href="/doc/libs/master/">Documentation</a>
+              <p><a href="/doc/libs/1_60_0_b1/">Documentation</a>
 
               <div class="news-description">
                 <div class="description">
@@ -84,7 +84,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/vmd/">VMD</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/vmd/">VMD</a>:</span>
   Variadic Macro Data library,
           from Edward Diener.
         </div>
@@ -96,7 +96,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/atomic/">Atomic</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/atomic/">Atomic</a>:</span>
           <ul>
             <li>
               <div>
@@ -134,7 +134,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/chrono/">Chrono - 2.0.5</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/chrono/">Chrono - 2.0.5</a>:</span>
           <ul>
             <li>
               <div>
@@ -199,7 +199,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -271,7 +271,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -288,7 +288,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/core/">Core</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/core/">Core</a>:</span>
           <ul>
             <li>
               <div>
@@ -307,7 +307,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/flyweight/index.html">Flyweight</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/flyweight/index.html">Flyweight</a>:</span>
           <ul>
             <li>
               <div>
@@ -319,7 +319,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/fusion/">Fusion</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/fusion/">Fusion</a>:</span>
           <ul>
             <li>
               <div>
@@ -385,7 +385,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -413,7 +413,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -449,7 +449,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/locale">Locale</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/locale">Locale</a>:</span>
           <ul>
             <li>
               <div>
@@ -497,7 +497,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -566,7 +566,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/master/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/doc/libs/1_60_0_b1/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -575,7 +575,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -589,7 +589,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
@@ -607,7 +607,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/optional/">Optional</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/optional/">Optional</a>:</span>
           <ul>
             <li>
               <div>
@@ -621,7 +621,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
@@ -630,7 +630,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/master/libs/predef/doc/html/predef/history.html#predef.history.1_4">history</a>
+                See <a href="/doc/libs/1_60_0_b1/libs/predef/doc/html/predef/history.html#predef.history.1_4">history</a>
                 for more details.
               </div>
             </li>
@@ -639,11 +639,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/test/">Test</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/test/">Test</a>:</span>
           <ul>
             <li>
               <div>
-                Boost.test v3.1 see the '<a href="/doc/libs/master/libs/test/doc/html/boost_test/change_log.html">Change
+                Boost.test v3.1 see the '<a href="/doc/libs/1_60_0_b1/libs/test/doc/html/boost_test/change_log.html">Change
                 log</a>' section for details.
               </div>
             </li>
@@ -691,7 +691,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/thread/">Thread - 4.6.0</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/thread/">Thread - 4.6.0</a>:</span>
   <em>New
           Experimental Features:</em>
           <ul>
@@ -913,7 +913,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/uuid/">UUID</a>:</span>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/uuid/">UUID</a>:</span>
           <ul>
             <li>
               <div>
