Fix markup, use relative links, and rebuild.
I changed the absolute links to relative so that the link rewriting can
work.

--- a/users/history/version_1_60_0.html
+++ b/users/history/version_1_60_0.html
@@ -307,6 +307,207 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/filesystem/">Filesystem</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>New Features:</em>
+                <ul>
+                  <li>
+                    <div>
+                      Added functions <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#lex-normal"><code><span class="identifier">lexically_normal</span></code></a>,
+                      <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#lex-relative"><code><span class="identifier">lexically_relative</span></code></a>,
+                      <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#op-relative"><code><span class="identifier">relative</span></code></a>, and <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#weakly_canonical"><code><span class="identifier">weakly_canonical</span></code></a>.
+                      Many thanks to Jamie Allsop for his help and perseverance.
+                      Resolves tickets <a href="https://svn.boost.org/trac/boost/ticket/1976">#1976</a>,
+                      <a href="https://svn.boost.org/trac/boost/ticket/5897">#5897</a>,
+                      <a href="https://svn.boost.org/trac/boost/ticket/6249">#6249</a>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Class <code><span class="identifier">path</span></code>
+                      added types <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">reverse_iterator</span></code></a>
+                      and <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">const_reverse_iterator</span></code></a>,
+                      and added functions <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">rbegin</span><span class="special">()</span></code></a>,
+                      and <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">rend</span><span class="special">()</span></code></a>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      C++11 <code><span class="keyword">noexcept</span></code>
+                      supplied as specified in the Filesystem TS if supported by
+                      the compiler.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      C++11 move constructors and move assignments supplied as specified
+                      in the Filesystem TS if supported by the compiler. Resolves
+                      <a href="https://svn.boost.org/trac/boost/ticket/10291">#10291</a>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Existing functions whose names changed in the Filesystem TS
+                      are now supported under both the old and new names.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Added <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-size"><code><span class="identifier">size</span><span class="special">()</span></code></a>
+                      function to class <code><span class="identifier">path</span></code>.
+                      Resolves <a href="https://svn.boost.org/trac/boost/ticket/6874">#6874</a>,
+                      Path should have a <code><span class="identifier">size</span><span class="special">()</span></code> member function.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Tickets:</em>
+                <ul>
+                  <li>
+                    <div>
+                      Fix <a href="https://svn.boost.org/trac/boost/ticket/11733">#11733</a>,
+                      Missing unistd.h include in boost/libs/filesystem/src/unique_path.cpp,
+                      by apply a patch from Idar Tollefsen.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fix <a href="https://svn.boost.org/trac/boost/ticket/5706">#5706</a>,
+                      unique_path Fails on Windows for Temporary User Profiles, by
+                      applying <a href="https://github.com/boostorg/filesystem/pull/15">pull
+                      request #15</a> from Sebastian Redl to fix a race condition
+                      in <code><span class="identifier">unique_path</span></code>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fix <a href="https://svn.boost.org/trac/boost/ticket/10591">#10591</a>,
+                      boost::filesystem does not build on iOS 8, by applying a patch
+                      submitted by Daniel Seither.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fix <a href="https://svn.boost.org/trac/boost/ticket/9454">#9454</a>,
+                      Boost Filesystem [library build] not compiling when BOOST_FILESYSTEM_NO_DEPRECATED
+                      is defined, by applying a patch submitted by Makesim.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fix <a href="https://svn.boost.org/trac/boost/ticket/11447">#11447</a>,
+                      <code><span class="identifier">__OpenBSD__</span></code>
+                      macro name misspelled, by applying a patch submitted by Jasper
+                      Lievisse Adriaanse.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fix <a href="https://svn.boost.org/trac/boost/ticket/11288">#11288</a>,
+                      A patch to avoid redundant string allocations, by applying
+                      a patch submitted by Yevhen Ivannikov.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Resolve <a href="https://svn.boost.org/trac/boost/ticket/11175">#11175</a>,
+                      out-of-date documentation causing users to incorrectly expect
+                      that the library could be used with exceptions disabled.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Resolve <a href="https://svn.boost.org/trac/boost/ticket/11166">#11166</a>,
+                      by mitigating (i.e. reducing the likelihood of) a possible
+                      external file system race in <code><span class="identifier">remove</span><span class="special">()</span></code>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fix <a href="https://svn.boost.org/trac/boost/ticket/7258">#7258</a>,
+                      <code><span class="identifier">create_directories</span></code>
+                      returns false if the path ends with a slash. Also fix related
+                      issues if path contains dot or dot-dot elements, and added
+                      test cases to the test suite.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Resolve <a href="https://svn.boost.org/trac/boost/ticket/10766">#10766</a>,
+                      <code><span class="identifier">parent_path</span><span class="special">()</span></code> with redundant separator
+                      returns wrong value, by adding examples and notes to the reference
+                      documentation to show why the returned value is in fact correct,
+                      and to provide rationale for that behavior. See <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators">path.itr</a>,
+                      and <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-decomposition">path.decompose</a>
+                      <code><span class="identifier">parent_path</span><span class="special">()</span></code> and <code><span class="identifier">filename</span><span class="special">()</span></code> sections of the reference
+                      docs.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Close <a href="https://svn.boost.org/trac/boost/ticket/7607">#7607</a>,
+                      path should not infer an invisible &quot;.&quot; at the end
+                      of a path that ends with a slash, as resolved by <a href="https://svn.boost.org/trac/boost/ticket/7258">#7258</a>
+                      and <a href="https://svn.boost.org/trac/boost/ticket/10766">#10766</a>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Close <a href="https://svn.boost.org/trac/boost/ticket/11061">#11061</a>,
+                      <a href="https://svn.boost.org/trac/boost/ticket/11062">#11062</a>,
+                      Impossible to traverse the path of the reverse iterator, as
+                      effectively resolved by the addition of the class <code><span class="identifier">path</span></code> reverse iteration feature.
+                      The reference documentation has also been updated with a <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators">note</a>
+                      warning about the limitations of class <code><span class="identifier">path</span></code>
+                      iterators.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Other fixes:</em>
+                <ul>
+                  <li>
+                    <div>
+                      Clear several spurious GCC warnings.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fix bug in <code><span class="identifier">file_status</span></code>
+                      and <code><span class="identifier">recursive_directory_iterator</span></code>:
+                      C++ turns an explicit constructor with all arguments except
+                      first defaulted into non-explicit single argument constructor.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Apply Reference docs editorial cleanups: Use same style sheet
+                      as the rest of the documentation. Tweak tab font size. Fix
+                      excessively long lines in tables, synopsis.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Minor fixes, including pull requests from Jonathan Wakely and
+                      Marcel Raad.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_60_0_b1/libs/flyweight/index.html">Flyweight</a>:</span>
           <ul>
             <li>
