--- a/users/history/version_1_60_0.html
+++ b/users/history/version_1_60_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.60.0 - work in progress</title>
+  <title>Version 1.60.0 beta</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -35,18 +35,15 @@
               <h1>Version 1.60.0</h1>
             </div>
 
-                        <div class="section-note"><p>Note: This release is
-                        still under development. Please don't use this page as
-                        a source of information, it's here for development
-                        purposes only. Everything is subject to
-                        change.</p></div>
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.60.0 - work in progress</span></h2>
+              "news-title">Version 1.60.0 beta</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
               <p><a href="/doc/libs/1_60_0_b1/">Documentation</a>
-
+              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0.beta.1/boost_1_60_0_b1.tar.bz2/download">boost_1_60_0_b1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0.beta.1/boost_1_60_0_b1.tar.gz/download">boost_1_60_0_b1.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0.beta.1/boost_1_60_0_b1.7z/download">boost_1_60_0_b1.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0.beta.1/boost_1_60_0_b1.zip/download">boost_1_60_0_b1.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -1127,11 +1124,6 @@
           </ul>
         </div>
       </li>
-      <li>
-        <div>
-          <em>TODO</em>
-        </div>
-      </li>
     </ul>
   </div>
   <div id="version_1_60_0.news">
@@ -1448,7 +1440,9 @@
   <div id="version_1_60_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <em>TODO</em>
+      <a href="/users/people/beman_dawes.html">Beman Dawes</a>, Eric Niebler,
+      <a href="/users/people/rene_rivera.html">Rene Rivera</a>, Daniel James,
+      Vladimir Prus and Marshall Clow managed this release.
     </p>
   </div>
 </div>
