QVM Review begins.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -76,23 +76,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <!-- Added January 2011 -->
-
-                    <td>Quaternions, Vectors, Matrices (QVM)</td>
-
-                    <td>Emil Dotchevski</td>
-
-                    <td>
-                      <a href=
-                      "http://www.revergestudios.com/boost-qvm/">Source</a>
-                    </td>
-
-                    <td>Adam Wulkiewicz</td>
-
-                    <td>December 7, 2015 - December 16, 2015</td>
-                  </tr>
-
-                  <tr>
                     <!-- Added May 2011 -->
 
                     <td>Block Pointer</td>
@@ -489,6 +472,25 @@ http://www.boost.org/development/website_updating.html
                     <th>Result</th>
                   </tr>
                 </thead>
+
+                  <tr>
+                    <!-- Added January 2011 -->
+
+                    <td>Quaternions, Vectors, Matrices (QVM)</td>
+
+                    <td>Emil Dotchevski</td>
+
+                    <td>Adam Wulkiewicz</td>
+
+                    <td>December 7, 2015 - December 16, 2015</td>
+
+		    <td><a href=
+			   "http://lists.boost.org/boost-announce/2015/12/0458.php">
+			Ongoing
+		      </a>
+		    </td>
+
+                  </tr>
 
                   <tr>
                     <!-- Added August 2015 -->
