--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -414,7 +414,7 @@ http://www.boost.org/development/website_updating.html
 
                   <tr>
                     <!-- Added October 2015 -->
-                    <td>Segmented Tree Seq</td>
+                    <td>Segmented Tree</td>
 
                     <td>Chris Clearwater</td>
 
@@ -422,7 +422,7 @@ http://www.boost.org/development/website_updating.html
                       <ul>
                         <li><a href="http://rrsd.com/blincubator.com/bi_library/segmentedtreeseq-2/?gform_post_id=1520">
                             Incubator</a>
-                        <li><a href="https://det.github.io/segmented_tree_seq">
+                        <li><a href="https://det.github.io/segmented_tree">
                         Documentation</a>
                       </ul>
                     </td>                     
