--- a/users/history/version_1_60_0.html
+++ b/users/history/version_1_60_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.60.0 beta</title>
+  <title>Version 1.60.0</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -37,13 +37,13 @@
 
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.60.0 beta</span></h2>
+              "news-title">Version 1.60.0</span></h2>
 
-              <p><span class=news-date">In Progress</span></p>
-              <p><a href="/doc/libs/1_60_0_b1/">Documentation</a>
-              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0.beta.1/boost_1_60_0_b1.tar.bz2/download">boost_1_60_0_b1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0.beta.1/boost_1_60_0_b1.tar.gz/download">boost_1_60_0_b1.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0.beta.1/boost_1_60_0_b1.7z/download">boost_1_60_0_b1.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0.beta.1/boost_1_60_0_b1.zip/download">boost_1_60_0_b1.zip</a></td></tr></table>
+              <p><span class=news-date">December 17th, 2015 15:52 GMT</span></p>
+              <p><a href="/doc/libs/1_60_0/">Documentation</a>
+              <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0/boost_1_60_0.tar.bz2/download">boost_1_60_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0/boost_1_60_0.tar.gz/download">boost_1_60_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0/boost_1_60_0.7z/download">boost_1_60_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.60.0/boost_1_60_0.zip/download">boost_1_60_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -54,7 +54,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/vmd/">VMD</a>:</span>
+          <span class="library"><a href="/libs/vmd/">VMD</a>:</span>
   Variadic Macro Data library,
           from Edward Diener.
         </div>
@@ -66,7 +66,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/atomic/">Atomic</a>:</span>
+          <span class="library"><a href="/libs/atomic/">Atomic</a>:</span>
           <ul>
             <li>
               <div>
@@ -104,7 +104,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/chrono/">Chrono - 2.0.5</a>:</span>
+          <span class="library"><a href="/libs/chrono/">Chrono - 2.0.5</a>:</span>
           <ul>
             <li>
               <div>
@@ -169,7 +169,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -241,7 +241,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -258,7 +258,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/core/">Core</a>:</span>
+          <span class="library"><a href="/libs/core/">Core</a>:</span>
           <ul>
             <li>
               <div>
@@ -277,7 +277,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/filesystem/">Filesystem</a>:</span>
+          <span class="library"><a href="/libs/filesystem/">Filesystem</a>:</span>
           <ul>
             <li>
               <div>
@@ -285,9 +285,9 @@
                 <ul>
                   <li>
                     <div>
-                      Added functions <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#lex-normal"><code><span class="identifier">lexically_normal</span></code></a>,
-                      <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#lex-relative"><code><span class="identifier">lexically_relative</span></code></a>,
-                      <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#op-relative"><code><span class="identifier">relative</span></code></a>, and <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#weakly_canonical"><code><span class="identifier">weakly_canonical</span></code></a>.
+                      Added functions <a href="/libs/filesystem/doc/reference.html#lex-normal"><code><span class="identifier">lexically_normal</span></code></a>,
+                      <a href="/libs/filesystem/doc/reference.html#lex-relative"><code><span class="identifier">lexically_relative</span></code></a>,
+                      <a href="/libs/filesystem/doc/reference.html#op-relative"><code><span class="identifier">relative</span></code></a>, and <a href="/libs/filesystem/doc/reference.html#weakly_canonical"><code><span class="identifier">weakly_canonical</span></code></a>.
                       Many thanks to Jamie Allsop for his help and perseverance.
                       Resolves tickets <a href="https://svn.boost.org/trac/boost/ticket/1976">#1976</a>,
                       <a href="https://svn.boost.org/trac/boost/ticket/5897">#5897</a>,
@@ -297,10 +297,10 @@
                   <li>
                     <div>
                       Class <code><span class="identifier">path</span></code>
-                      added types <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">reverse_iterator</span></code></a>
-                      and <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">const_reverse_iterator</span></code></a>,
-                      and added functions <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">rbegin</span><span class="special">()</span></code></a>,
-                      and <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">rend</span><span class="special">()</span></code></a>.
+                      added types <a href="/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">reverse_iterator</span></code></a>
+                      and <a href="/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">const_reverse_iterator</span></code></a>,
+                      and added functions <a href="/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">rbegin</span><span class="special">()</span></code></a>,
+                      and <a href="/libs/filesystem/doc/reference.html#path-iterators"><code><span class="identifier">rend</span><span class="special">()</span></code></a>.
                     </div>
                   </li>
                   <li>
@@ -325,7 +325,7 @@
                   </li>
                   <li>
                     <div>
-                      Added <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-size"><code><span class="identifier">size</span><span class="special">()</span></code></a>
+                      Added <a href="/libs/filesystem/doc/reference.html#path-size"><code><span class="identifier">size</span><span class="special">()</span></code></a>
                       function to class <code><span class="identifier">path</span></code>.
                       Resolves <a href="https://svn.boost.org/trac/boost/ticket/6874">#6874</a>,
                       Path should have a <code><span class="identifier">size</span><span class="special">()</span></code> member function.
@@ -412,8 +412,8 @@
                       <code><span class="identifier">parent_path</span><span class="special">()</span></code> with redundant separator
                       returns wrong value, by adding examples and notes to the reference
                       documentation to show why the returned value is in fact correct,
-                      and to provide rationale for that behavior. See <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators">path.itr</a>,
-                      and <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-decomposition">path.decompose</a>
+                      and to provide rationale for that behavior. See <a href="/libs/filesystem/doc/reference.html#path-iterators">path.itr</a>,
+                      and <a href="/libs/filesystem/doc/reference.html#path-decomposition">path.decompose</a>
                       <code><span class="identifier">parent_path</span><span class="special">()</span></code> and <code><span class="identifier">filename</span><span class="special">()</span></code> sections of the reference
                       docs.
                     </div>
@@ -432,7 +432,7 @@
                       <a href="https://svn.boost.org/trac/boost/ticket/11062">#11062</a>,
                       Impossible to traverse the path of the reverse iterator, as
                       effectively resolved by the addition of the class <code><span class="identifier">path</span></code> reverse iteration feature.
-                      The reference documentation has also been updated with a <a href="/doc/libs/1_60_0_b1/libs/filesystem/doc/reference.html#path-iterators">note</a>
+                      The reference documentation has also been updated with a <a href="/libs/filesystem/doc/reference.html#path-iterators">note</a>
                       warning about the limitations of class <code><span class="identifier">path</span></code>
                       iterators.
                     </div>
@@ -478,7 +478,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/flyweight/index.html">Flyweight</a>:</span>
+          <span class="library"><a href="/libs/flyweight/index.html">Flyweight</a>:</span>
           <ul>
             <li>
               <div>
@@ -490,7 +490,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/fusion/">Fusion</a>:</span>
+          <span class="library"><a href="/libs/fusion/">Fusion</a>:</span>
           <ul>
             <li>
               <div>
@@ -556,7 +556,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -584,7 +584,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -620,7 +620,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <span class="library"><a href="/libs/lexical_cast/">Lexical Cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -644,7 +644,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/locale">Locale</a>:</span>
+          <span class="library"><a href="/libs/locale">Locale</a>:</span>
           <ul>
             <li>
               <div>
@@ -692,7 +692,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -761,7 +761,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/1_60_0_b1/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -770,7 +770,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -784,7 +784,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
@@ -802,7 +802,37 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/optional/">Optional</a>:</span>
+          <span class="library"><a href="/libs/numeric/odeint">odeint</a>:</span>
+          <ul>
+            <li>
+              <div>
+                New features:
+                <ul>
+                  <li>
+                    <div>
+                      Added functionality to throw an exception if too many ODE steps
+                      are performed.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Added possibility to limit maximal step size in adaptive methods.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                several Bug fixes, see https://github.com/headmyshoulder/odeint-v2/issues
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/optional/">Optional</a>:</span>
           <ul>
             <li>
               <div>
@@ -816,7 +846,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
@@ -825,7 +855,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/1_60_0_b1/libs/predef/doc/html/predef/history.html#predef.history.1_4">history</a>
+                See <a href="/libs/predef/doc/html/predef/history.html#predef.history.1_4">history</a>
                 for more details.
               </div>
             </li>
@@ -834,11 +864,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/test/">Test</a>:</span>
+          <span class="library"><a href="/libs/test/">Test</a>:</span>
           <ul>
             <li>
               <div>
-                Boost.test v3.1 see the '<a href="/doc/libs/1_60_0_b1/libs/test/doc/html/boost_test/change_log.html">Change
+                Boost.test v3.1 see the '<a href="/doc/libs/1_60_0/libs/test/doc/html/boost_test/change_log.html">Change
                 log</a>' section for details.
               </div>
             </li>
@@ -886,7 +916,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/thread/">Thread - 4.6.0</a>:</span>
+          <span class="library"><a href="/libs/thread/">Thread - 4.6.0</a>:</span>
   <em>New
           Experimental Features:</em>
           <ul>
@@ -1108,7 +1138,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_60_0_b1/libs/uuid/">UUID</a>:</span>
+          <span class="library"><a href="/libs/uuid/">UUID</a>:</span>
           <ul>
             <li>
               <div>
